# stringexample

./: README.md  stringexample.cabal
src/: StringExample.hs
